// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.bff.v1alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/bff/v1alpha/event_group.proto";

option java_package = "org.wfanet.measurement.reporting.bff.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "EventGroupsServiceProto";

option go_package = "wfa/measurement/reporting/bff/v1alpha/eventgroupspb";

service EventGroups {
  rpc ListEventGroups(ListEventGroupsRequest)
      returns (ListEventGroupsResponse) {
    option (google.api.http) = {
      get: "/v1alpha/{parent=measurementConsumers/*}/eventGroups"
    };
    option (google.api.method_signature) = "parent";
  }
}

message ListEventGroupsRequest {
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "reporting.halo-cmm.org/EventGroup"
    }
  ];

  int32 page_size = 2;

  string page_token = 3;

  string filter = 4;
}

message ListEventGroupsResponse {
  repeated EventGroup event_groups = 1;

  string next_page_token = 2;
}
