// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v1alpha/reporting_set.proto";

option java_package = "org.wfanet.measurement.reporting.v1alpha";
option java_multiple_files = true;

// Definition of a computed metric for a `Report` in terms of set operations.
message Metric {
  message ReachParams {}
  message FrequencyHistogramParams {
    int32 max_frequency = 1;
  }
  message ImpressionCountParams {}
  message WatchDurationParams {}
  message ReachCurveParams {
    // Number of points that should be plotted on the reach curve
    int32 number_plotting_points = 1;

    // Maximum impression count that should be plotted
    int64 max_impression_count = 2;
  }

  oneof metric_type {
    ReachParams reach = 1;
    FrequencyHistogramParams frequency_histogram = 2;
    ImpressionCountParams impression_count = 3;
    WatchDurationParams watch_duration = 4;
    ReachCurveParams reach_curve = 5;
  }

  // Whether the results for a given time interval is cumulative with those of
  // previous time intervals.
  bool cumulative = 6;

  // Represents a binary set operation.
  message SetOperation {
    enum Type {
      TYPE_UNSPECIFIED = 0;
      UNION = 1;
      DIFFERENCE = 2;
      INTERSECTION = 3;
    }
    Type type = 1 [(google.api.field_behavior) = REQUIRED];

    message Operand {
      oneof operand {
        SetOperation operation = 1;
        ReportingSet reporting_set = 2
            [(google.api.resource_reference).type =
                 "reporting.halo-cmm.org/ReportingSet"];
      }
    }

    // Left-hand side operand of the operation.
    Operand lhs = 3 [(google.api.field_behavior) = REQUIRED];
    // Right-hand side operand of the operation. If not specified, implies the
    // empty set.
    Operand rhs = 4;
  }
  message NamedSetOperation {
    // The name of the set for display purposes.
    //
    // e.g. this may be a column or row header in CSV output.
    string display_name = 1 [(google.api.field_behavior) = REQUIRED];

    SetOperation set_operation = 2;
  }
  repeated NamedSetOperation set_operations = 7;
}
